Packaging work: * Add (very poor) icon. * Fix desktop file. * Change .pro file to install icon and .desktop file. * Add debian packaging files.
git-svn-id: https://vcs.maemo.org/svn/katana@10 05c81399-d40f-49fa-a30b-2157e65eb73f

--- a/trunk/katana.desktop
+++ b/trunk/katana.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 Version=0.1
 Type=Application
 Name=Katana
-Exec=/home/user/katana
-#Icon=TODO
+Exec=/opt/usr/bin/katana
+Icon=katana
 X-Osso-Type=application/x-executable
