Oops, binaries are supposed to go to /opt/app_name.
git-svn-id: https://vcs.maemo.org/svn/katana@14 05c81399-d40f-49fa-a30b-2157e65eb73f

--- a/trunk/debian/rules
+++ b/trunk/debian/rules
@@ -24,7 +24,7 @@ builddir:
 	mkdir -p builddir
 
 builddir/Makefile: builddir
-	cd builddir && /opt/qt4-maemo5/bin/qmake-qt4 PREFIX=/usr BINPREFIX=/opt/usr ../$(APPNAME).pro
+	cd builddir && /opt/qt4-maemo5/bin/qmake-qt4 PREFIX=/usr BINPREFIX=/opt ../$(APPNAME).pro
 
 build: build-stamp
 
