Switch category to user/education
git-svn-id: https://vcs.maemo.org/svn/katana@60 05c81399-d40f-49fa-a30b-2157e65eb73f

--- a/trunk/debian/control
+++ b/trunk/debian/control
@@ -1,5 +1,5 @@
 Source: katana
-Section: user/utilities
+Section: user/education
 Priority: optional
 Maintainer: Josh Nisly <katana@joshnisly.com>
 Build-Depends: debhelper (>= 5), libqt4-dev, sword16-dev, libx11-dev, mce-dev
