Fixed embedded icon for app man; added display name.
git-svn-id: https://vcs.maemo.org/svn/katana@61 05c81399-d40f-49fa-a30b-2157e65eb73f

--- a/trunk/debian/control
+++ b/trunk/debian/control
@@ -9,69 +9,74 @@ Package: katana
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-core,
  libqt4-gui, sword16, mce
+XB-Maemo-Display-Name: Katana
 Description: A simple Bible reader
- Katana is a simple Bible reader based on sword.
+ Katana is a simple Bible reader based on the Sword library.
 XSBC-Bugtracker: https://garage.maemo.org/tracker/?atid=4056&group_id=1084
 XB-Maemo-Icon-26:
- iVBORw0KGgoAAAANSUhEUgAAACgAAAAwCAYAAABjezibAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz
- AAAMUAAADFABkurQFwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAAQdEVY
- dEF1dGhvcgBKYW1lcyBPdHOFsfYEAAAAwHRFWHREZXNjcmlwdGlvbgBCaWJsZVRpbWUgaWNvbiAi
- QmlibGUiLgpMaWNlbmNlOgpodHRwOi8vY3JlYXRpdmVjb21tb25zLm9yZy9saWNlbnNlcy9ieS1z
- YS8yLjUvIChvciBhbnkgbGF0ZXIgdmVyc2lvbikKaHR0cDovL3d3dy5nbnUub3JnL2xpY2Vuc2Vz
- L29sZC1saWNlbnNlcy9sZ3BsLTIuMS5odG1sIChvciBhbnkgbGF0ZXIgdmVyc2lvbinU6g60AAAM
- XElEQVRYhb2Ze4xc113HP+d157VPz9qbtb3xI46dOI5tYpImDUmzW2wHUgqN9p9ChVQeFS8JCVVI
- IAp/F1GhBilA1SooBZSgpSm0NA+XVgWaNImbpElanIft2I69D++8dnZmZ+becw5/3Du7M7OzJkUp
- V7p7tHd+59zP/X1/j3NnhPeen+Qh8rMHgSlg6rptZmp+MfxzX5j57Hue/34Divzs/jZQNqOm77lr
- bOvJ6a2cnB7h4AHDu1eWn9u53f8S7F38fwEU+dk9CdA0MHXrwfT2E1PDnJwe4d67Rn0qpUVsaYEI
- CIHWIrQ+BUf/5X0HFPnZyQRoCpgey4vrj9+nOTEVcHI66yfGUwI0oAAJJHz4BLITNHwEWr8PP1f9
- PwOK/OxEJ5Axfu9dt4ecmLLcP+39Tx1RQgpNDNU+O+E6AV1ytiEjIHr105/h1z73sH7JF2Y2wOg+
- QFuB+4glmwb237CnwcnpCiemavzshxoul1USDGDERrA2XKf32ocDXKO+6r7/ne+Kub/9O5P9xqng
- Vq3VabDfAB7o60GRn70T+OUE6ODgQCim71ng5PQC93+44PbsCttAyak7RnUNOAEQNVvi5e+dDt79
- 4pdzwey/Zm7OZVN7j9wywqGbh7hp/yA7JzL86u+8aMuVMO0LM1GXB0V+9jel9H9z2+E5eXL6PCem
- LvLBO5a81kokQLIbrJ+cbTAFSBdF8vWXX82988g/5sU/zG7ZPzQ4cPuRQyO3H7llmEf+apjrxlNY
- 6wgjRxg6Wi3L7utz6pXXyjcAb/RK/Ie//oln5Rf+chYIWJeun7c6odbhrFNv/ujM8Ft//0+T7tHH
- d+3OZkduPXhg6PChm4f5688NsWXEICSAx3tPrd7CWo91njB0hCFM7sjwymvlA/0ABx/7yjE++2eP
- nR8dqe/ZHGr99F5fePvcljOPPXFD69HHb5n0fvzwvj25/Qf2DfInnx5gIKfRGpQCpTy11dbaDb0H
- 5zzOQWQdUeSJIs/EeAbgQG8MauDtm26cGD/+4F9s+eJDnzl99NC7t8WydgEtXLo89vpXvn6w/ujj
- d09UKpNHd+7I7No9mePjD2Z9KiWEMWCMwPmIesOilURKgZQgpegC9D4GtNYR2Rhwaz61KeA55/3d
- J6YOD33y977w00Hww/lfvP8/ThsTFQvFweHnXrxt4tyFA0e2jqU+PDGe5vAtKZ8KhDABBEbQDBvC
- IYmsJIwkWgt2j77OaLbC+fJRQj+MEAIhugGt9TgXyxxFnnRaMZDTN/cFvLrUwgRe3PPBUa5e/cD4
- 156+9SPL1Yh0SjI0ZPzBmxBBIAgCRzNcFR6F9QJrY7DIekLl0Fpy9w2nOPYzt5PODLPrzX/niRc+
- ihAgEkLvfYfMfi0Wo9CzdSx10yaAzWSyRelQ5McE2gjqjRaNVigcEueT00ms9TGY9jFcGMNp7dh1
- fQaCMX7wxtfJNZ9HRceohuNdN3VuHbINaCPHyLDZIvKzo74wU+oEPLvasDQaDuc91oG1Fusims0I
- 72USMz7+3Pq1uImMJ4wcWsVwSglqtWVGraNYXiAYEAzKt5ir5TdI7Ny61DGgZHjQAOwHnu/yIECx
- 3CII4qeKbHzjVujWoGzytJGJ4ULtMJFEK4HWEqUESgnKpZAdXiDEEMvNQfLZN1m5dKxL4vnFVcqV
- FtWaZaUeslKz1GqeelW0E2Ud0Bdm5kR+tlGuROmxMRk/oYMo9LRCRxSBNR1wSbwZIwkjh5IdgFJw
- ZQEmK0VgmFojg5HL1OqW5WrI+Us13nl3hdH0AgMZy4WrW2hEQeJaibd6Qya3e/HZSiU6uG1rSljn
- 4/rkPFHk1iXV8fUwlGtwWrU955JR8vr5PEdW5rA2oLaaYYAy3372EnfceIHfeqDMtm3gjaBaX6Fw
- 4Vn+6NEZQMRdMU6FvoDnypXooFJplExkTtpQs+WIIkdkkjKiHDqScdwZh9YKpURS9yxvzY2zXLzA
- ajPL3GKK1Krhm18ep+l3MFeoc3lhnsWlJVbqgn1b3kYolbRsgZd43CaApXJLqDWPSABaoWO1YQm1
- xDjQFrSWGOfR2qGdREWWkYFVPrD3DY7uLzAyKrhSHOdioU6h6Lj5xuM896N5Li/MUygVUarBYLrG
- 4fHz/OcLe+J2kwAK5YR3fr/Iz0pfmHFdEhfLLZSSKK1QWqKMQgeasGbjjPUe7eIzdJ6Ut3zy+Asc
- 2OvIDmSpMspCdZT55QaV6irlah3I8uqZNzAmYjC7yrFdl8j4FZYKOf751FG+evpOhIJ2insDhDYA
- dgHneyQOUVJijEIHCm0UKlCgFF5A6AVh6FHOY5zjT3/lO/jR3by8JLELIc43kaJFK4rrYn7LBIXy
- MoPZRSblOS5eHuXhp+/l5Yt7sT7ZjnXAIQTCgMe247Ab0DnPSt2hjEQn3tNGIbXCxwoAAiegaQU3
- TLzOty+NopRnNFdlcnSOlK2yuJRh1/Wa0sidnH7tDC2X5c0r43z+mQeSLaIAud5Z2usiiDdThG3A
- pzoBzwO+uhKJ7JBK5JUxZMoSRr5rIQF865Ub+eg9/0ZheYizl7fypW8d43tn9xM5zSfu/QEf+5hA
- mxyRrzKYswgt10E2jIkH07KdG2uJogF8YaYh8rNz5Uq4fTAfxBIHGm0idKCJvO2SAgEPPfMRHjr1
- C+uLt0cFL53L83G9igkG4lIzEMXJ0J5Ppwc7YDUghMf7bsB2opTL4cQeLYXWai1JdGDjd5zNFu+V
- SQjeKe/At8qk06NUVjLkcjYuJ23bDfM74jClhG9Ea5uGNZ8mgEIlcErHSaKNQiiJUOsjSia70fao
- EHrdpuEyrNbrZLMZWi6DD9Lkh6qg1dq8zvW6xpQG2C7yswO9gOeKpRZaCkwQJ4oyChXoHphkMd09
- 0nVKSsurZDM5WjZLQwyzO1/oAOm2RSnQ8SjTa6Lu7wuopEDpOElMkskxSPKEup8HezyhFYXyKplM
- BkeKSjTGvuvmu+asP2CPBzNBm+fABolXG5Yo9HGZ0SouOSkdZ2DHU2+QpQ3dAX9uTpILwJgMNTvM
- jtHlNVvRJ0RiLypkthuwM0nOAVSqIWoohQoUxmiUsWijiZzvSoTeJBE9pePVy+Oc0CvoVBrnNakU
- 3W2tJ7HW1st2l5q1/3xhZhGoVcottO7woNHoQHXFycbg3hhLZ5cnEWGRdCpFy2UZyIZrtmuK6D6h
- YjQipV0/iQHOVkotL5NerIxa6yqdUP2CG63WAZSkEg7TaiyTSado2BzptEcY0RMmfSqElohsIPtJ
- HCfKUuOwMfGeL4a0KKPiDpTI0S7KXHOEYqVEfiRHteZphgak3ji3o5PEg0BmU7hSPSvyszs3AJYr
- IVKA0jGkCTTKeITuXqhfy+ot4F/67k7+4PjXyA6tcObSttjrmxb79XXlQLrNc6AX8Gyh1Ipf141C
- GYcyLo7BxnqSiA3BvREWBD8s7ON3Z3cxklpmYXUMoTbrxevrCUAObg54rlwJEc7HtbC9szEeoXyP
- LBsbfj+vNFEsNDPx1qrXdhNYOZTdHNA5T7UaooZM3O6MRxuPDjyR2xykG777Wv+429xW5NKgpMO6
- DYDvAG653JJD+YGkYLtkA+uxUUct7FPDukH6eOe92CbXZC4l3PLqTV2AvjDTEvnZy+ViY3LLAYXW
- PslkjzI6fh9tF9lrxVLPzcR7sPGhxS5WsAtlovmK881QIkRrw1fAwNnS1dWdSgmhtEziUKNMhLD/
- izzXhN5oa0s17EKFaL6MLa54vG9bvgY8ifeP9AN8u1Rs3qcF6HYt1MSZHLprxFTPtY6xnRC+aYkW
- y9j5MtF8yflmFDcKQRnPM8CTwNO+MDPXhukHeHp+sfEbohmidYDRYAxozXqZuBZI4jSEAA+2tEI0
- V8bOl7CllfjL/vjvSwnQU3ie94UZS5+jH+BXry41P3/xv5dSA4cmURqUAR20ra8tpW9GRPOl2Etz
- Jedba14q4HmK+GXoaV+YudoPqPfo+zuJyM8+vHUs9dsPfuowhSDHQtWxWHEsVC3W9UjqPba4QjRX
- ws6VvC2utD91xF8CPZV46vvtl/Ef59gMcBLBi5Pbs+OHj++lPj7G/LJjseppRR4aIdF8iehKkWiu
- 7H0YJRqziOfJBOiUL8wUf1yg9wSYQG4HnggCecfk7iFns2m5VGxRLzdwy/W2mQWepR1L8Eq/X4t+
- IoAJZAr4Y+DngYMIangKwH8lQN/0hZnK+wnUe/wPsz+2oZ0Gg9IAAAAASUVORK5CYII=
+ iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAIAAADYYG7QAAAACXBIWXMAAAxO
+ AAAMTgF/d4wjAAALMElEQVR42rWZa2xc13HH55yZc/dNcrkiaVKi3o/Ypi3F
+ qhPJjgyLsagWbmPYiIEWMYoESYwgRhGgQAvkQ4N8CYqiBYoYaBMECIIkCNAP
+ 6cNwW6R2QylS4odiRJTsxLJVvSNxd8Xdvfvee89j+uEu36tw/chicQGCc+f8
+ 7n/mzJydi/Chf3ALxB6C+BOj255rthyYC+/pbvqQIMaBpkBNJTL7H3l45/Hp
+ kePTQ/fsUy+8GH/2C6eLxVL/nsT7h5CjoKZATQFN3Tc1PnN08Pj00JFDQ/G4
+ AgAAC2AAdLGYf/bZv3nhhZO/HyCZiwhATW0aGTn2KM0c9WaOJibuigMQAALI
+ RZ8MYJewvve9F7/ylX+q19sfBpDMAt0biaFio4cf1DNH7fGj7oEDJAUBLH2X
+ aJaAHIBbZDLnz1+e+cNvF+avAvB7BxIDoO4FNQV0H+D4rh2d49PVmaPN6SPt
+ TJoAFIBajRLRyNUOXacT/OKVy7Mnq7M/T75xfpeKjbbrv4T63/YNRHvB+wSo
+ KcAtmbSZPlI4Pl2YObqwa4dZhIg41CLHehphjHv9zM0TP2vMnk6/8qsd6czW
+ /fcOTd098JG9mS3jiT//8uv+lacBbB+7LPaYzHzxgfvzx6evzBz9+eEHF5TC
+ FRwrJVkjDDonzp0rzZ4Mfnpq4PSZPUPD0/unhg4/NPjsFwbvGotZ67RxWrsw
+ tNu3Zuauj4G91QdQ/InPP/Pqd/7xxwDeOo41AerSvH2hOXvCzZ7OnXrt3oHs
+ o/fsG9z/wOAzzwwMDykhAYCZudkKrWXrWGunNUxuTszhRH9AIvEv/3bwy5/9
+ 0YH9rV4c3e/Vq3b2JM6emjj1+n1e4g9270jv2535+ifT6RQRASIgcrMdRi6Z
+ wTl2Dox1xrAxPD6WADnRX2F08x/Zc/hzf/GNv3ru63/69G0pl2nyeXniZHL2
+ 1PbTZw6F9vDklvT2ydRnP5OIxaVSoJRwbFodSyilFFKClGIJiJmdA2udsWwM
+ j+RigJv7A7JFx/xHj33877/1/X/41qtTu38SBm1tBq7cOFD0Hx0dSY+PxQ8d
+ 8mKeVB54SgQmcIE0VmojicT27FvZZPWKf0DzoBBCiGUga9k5to6N4XgcE6mt
+ 7WZfChVuL4QqBkceyt6+/djF6w/X6iYek4M5GhkXnic8zwW6w4CWhbXSWGks
+ a3RE8uFdLx/8xIPxxOC2d3/672c+JQRERMy8GDWOMsloHr1r57Viv0ABADBb
+ JJPbJEiJVifshNqBdCwdS+ektWysNMTGstaOSBK5bVsT4G06985/poLX0Rys
+ 67Flr67LFAFZ44aHh6+JFHBzw5AV2h3b6TjHbB1Ya60zQWCYJTM7x47ZWo5S
+ wSjWxhFKIocoms1a1rqyX/DSIiMvzjdzK0PmXDdw1rE1cjCjACfAXNxYIQAo
+ +6HngXNsLGvjQu3cki/LRrExrMkpIwkFkUQUiMKv6M0shBioBZlc8t3GjYNL
+ IcsX2341rDdto6UbTdtscqsu+gSqAGu/ajZtkszADozmUDtjwKpFGssanVJS
+ G4dyEUiKWwWYrJYBBpudhJK1ZsvW6vrKjebV3zay8UI6Ya/dHu4YDwCAJVv6
+ HTt/9XnI5avVidGRuHVsrDOOjXHdMBEb67SWEQ1hpI1DFIjyrSu5/Y15a71m
+ O5EG/8QrNz6259qXHvdHR4GVqLcapWuvfPUHnwYQIAACAOwXqOBXDaJACc6x
+ MU5rF4TOGGeU1EYSOjKSUJJyRIgoCKWU9uL8WK18rR0k54uxWFv97w/HAt48
+ X2rdLOSLCwuNltg9/H8CEQQACJbcN5AtVnyN3aeXABBq1+5YTVI5IAtEUjkm
+ cuQkGjuUbn985zsH9paGsuJWeex6qVUqu7v3HHv1N/mbhXypUkbsZOLN+8eu
+ nD6zAxaBBDp2EwCi5zlkbcjKfogokRBJokLySDetMWyYyTE51o5jbD937My+
+ nS6ZTtYhW6hn87VOtd726y2A5PkL7yhlMsn2wW03EtxYKKX+9eUD//HGIYEA
+ UaYrAE0gR8AVN1So4Fc1SqkUkoekED0ERBagWWjN6Fg597XP/Iyz288uSFvQ
+ jgMpwtCw1i43PF7ya5lkcVJevn4z+8//88jZ6zstSwABizQghFDAYAEn+gBy
+ Bee40XKoJCkkj0ihJOTuwUk4AYEVu8bfOnEji8jZVH0yOx+z9eJCYttWqgwd
+ euPNC6FLvntr7JsvPQ4CQAiQ3aodeQAB4AGABpwAPbchUBGA6w2THEBUSJ4k
+ jyhmteEldwJgdm7Pp478V6k2cOnmyHdnD752aa9x9Mwj5558UpBKGa5nUlaQ
+ 7C6/6goghIhLALhTi10NxBqc71cnMjmPvEghQx4ZtkuCg4DnX/rj51/+k673
+ 6Irwq8u5P6O28tLNdiKdNoDYtYclhRbJCEDAnUrRut9lLu/7u3dQhigSiciz
+ 3QPnGu8royDEVX8zh348nq02EqmUFV2g5dRZeRUxYru5PyBb8H2DhKgQCdFD
+ UihC7qW/ANGFBAEdl2i3biWTE6FLsBfPDdRLrSFYivOau2LEnSyIOHBnQ4UK
+ 5UpIUihPkkJUiB5Bh1cp1IsMACq1djKZCm2yIwa350rlYHh9AkV/yji5KgBO
+ gLm89kfXeoXKlRClQELypPKIFApEQShQCkJACbh8FVEzQxSEJb+dSCQcxKpm
+ 0+678ktmguSyh8g+4QH0TiO5XqF2xxrNpJAIUUmKkaBoeYSouS/5jfgWKS/P
+ y5QHSiWadnBzthYZiFUPgIAIhDLpAfTuaD1CBgDVusaBGHqoFKGypMg4Xsrf
+ lUm9Mj/O3xyboQbF4o4pFoPlXrEi97v3JmX/QFXgoOqHo8NJIoxoyHNG81rv
+ 6zLjUm1S6HI8NhraZDqpu92051ZAIWLItp+QRYeQSiBJokJUGJXspTAt6x/F
+ kaIgokBZ1YNhp5aIxzo2FY+zUGJFlFcEGhFIimSsZw71mg/ZQnkhUEoqFTFZ
+ VAi6W1QE9C4tUQTL1UpuKFVvcqAVSFplLFYVM5mMuUoMZA5caSMgV/SrWgpA
+ kkpJ5REqFgQ96mG3FC0zffcXW/7y2IvJgcaFG6OAslct7XqQ6Xg3jTYGsvlS
+ JSQAUojKoXLkIXR4OYdFbzIA8evS7ud+vG0oViu0Nwm8Q8USQgDITHxx57+5
+ oUIFv6qFYySkqO0rFsir+tGKpF4jQABYCBKAqw3WkcmBZM+N1hvIOa7XNQ4o
+ JETFpJg8Ng7uoP+q/FibZ2v246KBSMUBRX9A9jYA1/xwIJcmhUSOPCTF1vAa
+ 5dctD/0aCAEAMhVzenM/U1gDruyXO8P7kIhRISpGRcBu8engTr0Wllfv/S/W
+ 1hartuCbvM+BWT+5usNY2OYrt1uIAkmSkqQIlRH2DvrfodeuNLCVpi1UTd63
+ 5Xr3aG+vgp6DYLY/IJevlEMSQFEpIiAPQbte+dGjIEVZzIE1Rd/mfZMvcxAp
+ 0YTwHOizoM+Bq7yXwbm5lC92RKCJPEWgFBBBdxv3XH7pLMZgKw0z79t8xVYa
+ wADAYC6DPgt6DsxFAPe+Jvn6zO2FxvW3F9JTk0iACsiLbHsHiANj8hWb9818
+ mcNIjDqEcxDOgZ4Drn3gVwuuCsGJl/47/dSWLHopVEAEpMC6FWFituWGma/Y
+ +bItN7uzaXNxUYxLv3se/d4H5zIHg383uWX8/mM7W2Ob8jVXrHNoGDra5Cvm
+ VtnMV1hbAACuQngW9FnQ54EbH/Ctidhghp/+ay+5d3J7xiYTC+Ww5XdcrRVp
+ COYd0GchnAN79f2J8f5eLShIPAXqo4BbAAJwdTAXQM+BPg/cgt/D5/8B6/Ob
+ Fb6eZqQAAAAASUVORK5CYII
